package org.eaxy;

/**
 * Marker interface for varargs methods with Namespaces, Attributes and Nodes
 */
public interface Content {

    // Marker interface

}
